--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mersennetwister": "^0.2.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
